[tool.poetry]
name = "lit"
version = "0.1.0"
description = "A minimal Git clone, written in Python"
authors = ["Rishikesh Kanabar <rishikesh.kanabar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
pydantic = "^2.6.3"

[tool.poetry.scripts]
lit = "lit.cli:cli"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
